Applying a new, darker styling. Needs some detail work to make sure everything is readable.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 @import url(http://fonts.googleapis.com/css?family=Ubuntu:500&subset=latin,latin-ext);
 
 body{
-	color: #2c3e50;
+ /* color: #2c3e50; */
 }
 
 .sidebar {
@@ -21,7 +21,7 @@ body{
 
 .sidebar-header .title a{
 	text-decoration: none;
-	color: #2c3e50;
+	/* color: #2c3e50; */
 }
 
 a.nav-link {
@@ -60,14 +60,17 @@ article{
 	letter-spacing: 3px;
 }
 
-article.home div a, article.home pre a { color: #2c3e50; }
-article.home div a:hover, article.home pre a:hover { color: #2c3e50; text-decoration: none; }
+article.home div a, article.home pre a { /* color: #2c3e50; */ }
+article.home div a:hover, article.home pre a:hover { /* color: #2c3e50; */ text-decoration: none; }
 
-h1,h2,h3,h4,h5,h6{ font-family: 'Ubuntu', sans-serif; color: #f2756a; }
-h1 a,h2 a,h3 a,h4 a{ color: #f2756a; }
-h1 a:hover,h2 a:hover,h3 a:hover,h4 a:hover{ color: #e74c3c; }
+h1,h2,h3,h4,h5,h6{ font-family: 'Ubuntu', sans-serif; color: #5e6347; }
+h1 a,h2 a,h3 a,h4 a{ color: #5e6347; }
+h1 a:hover,h2 a:hover,h3 a:hover,h4 a:hover{ color: /* #e74c3c; */ }
 
-
+code {
+  color: ##c8c8c8 !important;
+  background-color: #59697c;
+}
 
 footer {
 	padding-top: 15px;
